# cmake_demo

./: CMakeLists.txt  README.md
demo/: CMakeLists.txt  main.cpp
mylib/: CMakeLists.txt  mylib.cpp  mylib.h
